deploy/k8s/kong.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong
  namespace: payment-switch
spec:
  ports:
    - port: 8443
      targetPort: 8443
  selector:
    app: kong
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
  namespace: payment-switch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
        - name: kong
          image: kong:3.8
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: kong-config
              mountPath: /etc/kong
            - name: certs
              mountPath: /certs
      volumes:
        - name: kong-config
          configMap:
            name: kong-config
        - name: certs
          secret:
            secretName: kong-certs
